<resources>
    <string name="app_name">Simple Bible</string>
    <string name="mail_to_email">mailto:theunknownandrew+androidapps@gmail.com</string>
    <string-array name="books_n_chapter_count_array">
        <item>Genesis:50</item>
        <item>Exodus:40</item>
        <item>Leviticus:27</item>
        <item>Numbers:36</item>
        <item>Deuteronomy:34</item>
        <item>Joshua:24</item>
        <item>Judges:21</item>
        <item>Ruth:4</item>
        <item>1 Samuel:31</item>
        <item>2 Samuel:24</item>
        <item>1 Kings:22</item>
        <item>2 Kings:25</item>
        <item>1 Chronicles:29</item>
        <item>2 Chronicles:36</item>
        <item>Ezra:10</item>
        <item>Nehemiah:13</item>
        <item>Esther:10</item>
        <item>Job:42</item>
        <item>Psalms:150</item>
        <item>Proverbs:31</item>
        <item>Ecclesiastes:12</item>
        <item>Song of Solomon:8</item>
        <item>Isaiah:66</item>
        <item>Jeremiah:52</item>
        <item>Lamentations:5</item>
        <item>Ezekiel:48</item>
        <item>Daniel:12</item>
        <item>Hosea:14</item>
        <item>Joel:3</item>
        <item>Amos:9</item>
        <item>Obadiah:1</item>
        <item>Jonah:4</item>
        <item>Micah:7</item>
        <item>Nahum:3</item>
        <item>Habakkuk:3</item>
        <item>Zephaniah:3</item>
        <item>Haggai:2</item>
        <item>Zechariah:14</item>
        <item>Malachi:4</item>
        <item>Matthew:28</item>
        <item>Mark:16</item>
        <item>Luke:24</item>
        <item>John:21</item>
        <item>Acts:28</item>
        <item>Romans:16</item>
        <item>1 Corinthians:16</item>
        <item>2 Corinthians:13</item>
        <item>Galatians:6</item>
        <item>Ephesians:6</item>
        <item>Philippians:4</item>
        <item>Colossians:4</item>
        <item>1 Thessalonians:5</item>
        <item>2 Thessalonians:3</item>
        <item>1 Timothy:6</item>
        <item>2 Timothy:4</item>
        <item>Titus:3</item>
        <item>Philemon:1</item>
        <item>Hebrews:13</item>
        <item>James:5</item>
        <item>1 Peter:5</item>
        <item>2 Peter:3</item>
        <item>1 John:5</item>
        <item>2 John:1</item>
        <item>3 John:1</item>
        <item>Jude:1</item>
        <item>Revelation:22</item>
    </string-array>
    <string name="how_am_i_here">How did I end up here?! Clearly something\'s wrong.</string>
    <string name="title_activity_chapter">Chapter</string>
    <string name="title_activity_bookmark">Bookmark Verse</string>
    <string name="title_activity_settings">Settings</string>
    <string name="menu_item_settings">Settings</string>
    <string name="hint_book_name">Enter Book Name</string>
    <string name="hint_chapter_number">Chapter #</string>
    <string name="hint_text_to_search">Enter exact text to search</string>
    <string name="button_goto_location">Goto Location</string>
    <string name="button_search_text">Search Text</string>
    <string name="book_details_append_chapters">" Chapters"</string>
    <string name="daily_verse_template"><![CDATA[<h3>%1$s</h3><hr>%2$s : Chapter %3$s : Verse %4$s]]></string>
    <string name="search_result_template">(%1$s %2$s:%3$s) %4$s</string>
    <string name="chapter_verse_template">%1$s - %2$s</string>
    <string name="tab_home">HOME</string>
    <string name="tab_books">BOOKS</string>
    <string name="tab_search">SEARCH</string>
    <string name="tab_notes">NOTES</string>
    <string name="search_text_empty">Search Text is Empty</string>
    <string name="search_text_length">Enter at least 3 alphabets</string>
    <string name="search_no_results">No Results Found</string>
    <string name="search_text_results_found">" results found."</string>
    <string name="button_search_reset">Reset Search</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="button_share">Share</string>
    <string name="chapter_list_prepend_text">Chapter </string>
    <string name="message_incorrect_book_name">Incorrect Book Name</string>
    <string name="message_incorrect_chapter_number">Incorrect chapter number, using default</string>
    <string name="share_append_text">- NIV - shared using Simple Bible</string>
    <string name="button_edit">Edit</string>
    <string name="fragment_note_empty_header">No Bookmarked Verses exist</string>
    <string name="fragment_note_entry_multiple_bookmark">%1$s (%2$s : %3$s) and %4$d more Verses are Bookmarked in this entry</string>
    <string name="fragment_note_empty_instruction">To start Bookmarking Verses, with or without notes, you can either Long Click on a Search Result or Verse within a Chapter and then select Save from the bottom list of options.</string>
    <string name="activity_bookmark_reference_present">This verse is already bookmarked</string>
    <string name="activity_bookmark_reference_absent">This verse is not already bookmarked. You may enter a note here to associate with the verse if you wish. </string>
    <string name="activity_bookmark_empty_note">No Notes saved for this reference.</string>
    <string name="activity_bookmark_alert_delete_title">Delete Bookmark</string>
    <string name="activity_bookmark_alert_delete_message">"Do you want to delete this bookmark? Note that when deleted, it cannot be restored.</string>
    <string name="activity_bookmark_alert_delete_positive_text">Delete</string>
    <string name="activity_bookmark_alert_delete_negative_text">Cancel</string>
    <string name="activity_bookmark_toast_delete_success">Bookmark Deleted</string>
    <string name="activity_bookmark_toast_delete_failure">Bookmark Not Deleted</string>
    <string name="activity_bookmark_toast_save_success">Bookmark Saved</string>
    <string name="activity_bookmark_toast_update_success">Bookmark Updated</string>
    <string name="activity_bookmark_toast_save_failure">Bookmark Not Saved</string>
    <string name="activity_bookmark_toast_update_failure">Bookmark Not Updated</string>
    <string name="activity_bookmark_share_note_below_text">Bookmarked Notes are below:</string>
    <string name="text_disabled">Disabled</string>
    <string name="pref_cat_theme_title">Theme &amp; Appearance</string>
    <string name="pref_key_theme_dark">pref_key_theme_dark</string>
    <string name="pref_key_theme_title">Use DARK Theme</string>
    <string name="pref_key_text_style">pref_key_text_style</string>
    <string name="pref_key_text_style_title">Style to use for verses</string>
    <string name="pref_key_text_style_normal">Normal</string>
    <string name="pref_key_text_style_old_english">Old English</string>
    <string name="pref_key_text_style_typewriter">Typewriter</string>
    <string name="pref_key_text_style_default">@string/pref_key_text_style_normal</string>
    <string-array name="pref_key_text_style_options">
        <item>@string/pref_key_text_style_normal</item>
        <item>@string/pref_key_text_style_old_english</item>
        <item>@string/pref_key_text_style_typewriter</item>
    </string-array>
    <string name="pref_key_text_size">pref_key_text_size</string>
    <string name="pref_key_text_size_title">Size of text in verses</string>
    <string name="pref_key_text_size_small">Small</string>
    <string name="pref_key_text_size_medium">Medium</string>
    <string name="pref_key_text_size_big">Big</string>
    <string name="pref_key_text_size_large">Large</string>
    <string name="pref_key_text_size_default">@string/pref_key_text_size_medium</string>
    <string-array name="pref_key_text_size_options">
        <item>@string/pref_key_text_size_small</item>
        <item>@string/pref_key_text_size_medium</item>
        <item>@string/pref_key_text_size_big</item>
        <item>@string/pref_key_text_size_large</item>
    </string-array>
    <string name="pref_cat_reminder_title">Reminder</string>
    <string name="pref_key_reminder">pref_key_reminder</string>
    <string name="pref_key_reminder_title">Reminder : Coming Soon</string>
    <string name="pref_key_reminder_tone_title">Tone to use</string>
    <string name="pref_key_reminder_tone">pref_key_reminder_tone</string>
    <string name="pref_key_reminder_vibrate_title">Vibrate</string>
    <string name="pref_key_reminder_vibrate">pref_key_reminder_vibrate</string>
    <string name="pref_cat_about_title">About</string>
    <string name="pref_key_changelog">pref_key_changelog</string>
    <string name="pref_key_changelog_summary">Current Version : 2016-AUG-27</string>
    <string name="pref_header_change_log">Changelog</string>
    <string name="pref_key_rate">pref_key_rate_app</string>
    <string name="pref_key_rate_title">Rate this Application</string>
    <string name="pref_key_rate_summary">On Google Play</string>
    <string name="pref_key_feedback">pref_key_feedback</string>
    <string name="pref_key_feedback_title">Provide Feedback</string>
    <string name="pref_key_feedback_summary">By Email to Developer</string>
    <string name="feedback_email_subject">Feedback : Simple Bible Android Application</string>
    <string name="pref_key_more_apps">pref_key_more_apps</string>
    <string name="pref_key_more_apps_title">More Apps by Developer</string>
    <string name="pref_key_more_apps_summary">More Apps by Developer</string>
    <string-array name="pref_key_list">
        <item>@string/pref_key_theme_dark</item>
        <item>@string/pref_key_text_style</item>
        <item>@string/pref_key_text_size</item>
        <item>@string/pref_key_reminder</item>
        <item>@string/pref_key_reminder_tone</item>
        <item>@string/pref_key_reminder_vibrate</item>
        <item>@string/pref_key_changelog</item>
        
    </string-array>
</resources>