<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_cat_theme_title">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_theme_dark"
            android:summary="@string/text_disabled"
            android:title="@string/pref_key_theme_title" />
        <ListPreference
            android:defaultValue="@string/pref_key_text_style_default"
            android:dialogTitle="@string/pref_key_text_style_title"
            android:entries="@array/pref_key_text_style_options"
            android:entryValues="@array/pref_key_text_style_options"
            android:key="@string/pref_key_text_style"
            android:summary="@string/pref_key_text_style_default"
            android:title="@string/pref_key_text_style_title" />
        <ListPreference
            android:defaultValue="@string/pref_key_text_size_default"
            android:dialogTitle="@string/pref_key_text_size_title"
            android:entries="@array/pref_key_text_size_options"
            android:entryValues="@array/pref_key_text_size_options"
            android:key="@string/pref_key_text_size"
            android:summary="@string/pref_key_text_size_default"
            android:title="@string/pref_key_text_size_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_export_title">
        <SwitchPreference
            android:defaultValue="false"
            android:enabled="false"
            android:key="@string/pref_key_reminder"
            android:summary="@string/text_disabled"
            android:title="@string/pref_key_reminder_title" />
        <Preference
            android:key="@string/pref_key_export_bookmarks"
            android:summary="@string/pref_key_export_bookmarks_summary"
            android:title="@string/pref_header_export_bookmarks" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_about_title">
        <Preference
            android:key="@string/pref_key_changelog"
            android:summary="@string/pref_key_changelog_summary"
            android:title="@string/pref_header_change_log">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=com.andrewchelladurai.simplebible" />
        </Preference>
        <Preference
            android:key="@string/pref_key_rate"
            android:summary="@string/pref_key_rate_summary"
            android:title="@string/pref_key_rate_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=com.andrewchelladurai.simplebible" />
        </Preference>
        <Preference
            android:key="@string/pref_key_feedback"
            android:summary="@string/pref_key_feedback_summary"
            android:title="@string/pref_key_feedback_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/mail_to_email">
                <extra
                    android:name="android.intent.extra.SUBJECT"
                    android:value="@string/feedback_email_subject" />
            </intent>
        </Preference>
        <Preference
            android:key="@string/pref_key_more_apps"
            android:summary="@string/pref_key_more_apps_summary"
            android:title="@string/pref_key_more_apps_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/search?q=andrew%20chelladurai&amp;c=apps" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
