<?xml version="1.0" encoding="utf-8"?><!--
  ~
  ~ This file 'content_activity_bookmark.xml' is part of SimpleBible :
  ~
  ~ Copyright (c) 2016.
  ~
  ~ This Application is available at below locations
  ~ Binary : https://play.google.com/store/apps/developer?id=Andrew+Chelladurai
  ~ Source : https://github.com/andrewchelladurai/
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~ OR <http://www.gnu.org/licenses/gpl-3.0.txt>
  ~
  -->

<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="100"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.andrewchelladurai.simplebible.ActivityBookmark"
    tools:showIn="@layout/activity_bookmark">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/activity_bookmark_top_panel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/activity_bookmark_reference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:paddingBottom="@dimen/gap_big"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <android.support.v7.widget.ListViewCompat
            android:id="@+id/activity_bookmark_verse_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/gap_big"
            android:layout_marginTop="@dimen/gap_big"
            android:layout_weight="1" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/gap_big"
            android:layout_marginTop="@dimen/gap_big"
            android:layout_weight="1"
            android:fillViewport="true">

            <EditText
                android:id="@+id/activity_bookmark_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />
        </ScrollView>
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.ButtonBarLayout
        android:id="@+id/activity_bookmark_button_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/gap_big"
        android:layout_weight="10"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/activity_bookmark_but_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_save"
            android:text="@string/button_save" />

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/activity_bookmark_but_edit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            android:text="@string/button_edit" />

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/activity_bookmark_but_delete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            android:text="@string/button_delete" />

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/activity_bookmark_but_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share"
            android:text="@string/button_share" />
    </android.support.v7.widget.ButtonBarLayout>
</android.support.v7.widget.LinearLayoutCompat>
