<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/gap"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.andrewchelladurai.simplebible.BookmarkActivity"
    tools:showIn="@layout/activity_bookmark">

    <android.support.v7.widget.ListViewCompat
        android:id="@+id/bookmark_activity_verse_list"
        android:layout_width="match_parent"
        android:clickable="false"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/gap"
        android:layout_weight="1" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/bookmark_activity_label"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/gap"
        android:layout_weight="1">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/bookmark_activity_notes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="start|top"
            android:hint="See below for Notes regarding the above verse(s)"
            android:inputType="textMultiLine|textLongMessage|textAutoComplete|textAutoCorrect"
            android:padding="@dimen/gap"
            android:textAppearance="?textAppearanceListItemSmall" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bookmark_activity_button_save"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bookmark_activity_button_delete"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_delete" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bookmark_activity_button_share"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_share" />
    </android.support.v7.widget.ButtonBarLayout>

</LinearLayout>
