<?xml version="1.0" encoding="utf-8"?><!--
  ~
  ~ This file 'entry_note.xml' is part of SimpleBible :
  ~
  ~ Copyright (c) 2016.
  ~
  ~ This Application is available at below locations
  ~ Binary : https://play.google.com/store/apps/developer?id=Andrew+Chelladurai
  ~ Source : https://github.com/andrewchelladurai/
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~ OR <http://www.gnu.org/licenses/gpl-3.0.txt>
  ~
  -->

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/note_verse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="bookmark_no_entry_verse"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/note_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/note_verse"
            android:text="bookmark_no_entry_note"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/note_action_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/note_text"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/note_but_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/button_edit"
                android:src="@drawable/ic_edit" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/note_but_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/button_delete"
                android:src="@drawable/ic_delete" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/note_but_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/button_share"
                android:src="@drawable/ic_share" />
        </android.support.v7.widget.LinearLayoutCompat>
    </RelativeLayout>
</android.support.v7.widget.CardView>
